--- a/portfolio.html
+++ b/portfolio.html
@@ -80,63 +80,79 @@
                         <ul class="projects-list">
                             <li class="projects-item">
                                 <img src="./img/img.jpg" alt="фото" width="370" height="294">
-                                <h3>Технокряк</h3>
-                                <p>Веб-сайт</p>
+                                <div class="projects-naim">
+                                    <h3>Технокряк</h3>
+                                    <p>Веб-сайт</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (2).jpg" alt="фото" width="370" height="294">
-                                <h3>Постер New Orlean vs Golden Star</h3>
-                                <p>Дизайн</p>                        
+                                <div class="projects-naim">
+                                    <h3>Постер New Orlean vs Golden Star</h3>
+                                    <p>Дизайн</p> 
+                                </div>                    
                                 
-                            
-
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (3).jpg" alt="фото" width="370" height="294">
-                                <h3>Ресторан Seafood</h3>
-                                <p>Приложение</p>
+                                <div class="projects-naim">
+                                    <h3>Ресторан Seafood</h3>
+                                    <p>Приложение</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (4).jpg" alt="фото" width="370" height="294">
-                                <h3>Проект Prime</h3>
-                                <p>Маркетинг</p>
+                                <div class="projects-naim"> 
+                                    <h3>Проект Prime</h3>
+                                    <p>Маркетинг</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (5).jpg" alt="фото" width="370" height="294">
-                                <h3>Проект Boxes</h3>
-                                <p>Приложение</p>
+                                <div class="projects-naim">
+                                    <h3>Проект Boxes</h3>
+                                    <p>Приложение</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (6).jpg" alt="фото" width="370" height="294">
-                                <h3>Inspiration has no Borders</h3>
-                                <p>Веб-сайт</p>
+                                <div class="projects-naim"> 
+                                    <h3>Inspiration has no Borders</h3>
+                                    <p>Веб-сайт</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (7).jpg" alt="фото" width="370" height="294">
-                                <h3>Издание Limited Edition</h3>
-                                <p>Дизайн</p>
+                                <div class="projects-naim">
+                                    <h3>Издание Limited Edition</h3>
+                                    <p>Дизайн</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (8).jpg" alt="фото" width="370" height="294">
-                                <h3>Проект LAB</h3>
-                                <p>Маркетинг</p>
+                                <div class="projects-naim">
+                                    <h3>Проект LAB</h3>
+                                    <p>Маркетинг</p>
+                                </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (9).jpg" alt="фото" width="370" height="294">
-                                <h3>Growing Business</h3>
-                                <p>Приложение</p>
+                                <div class="projects-naim">
+                                    <h3>Growing Business</h3>
+                                    <p>Приложение</p>
+                                </div>
 
                             </li>
                         </ul>
-                   </div>
-             </div>
+                    </div>
+                </div>
             </section>
         </main>
 
