исправили ошибки в стилях

--- a/index.html
+++ b/index.html
@@ -123,26 +123,33 @@
                     <ul class="our-team-list">
                         <li class="our-team-item">
                             <img class="img-cards" src="./img/pfoto1.jpg" alt="фото" width="270" height="260">
-                            <h3 class="img-naim">Игорь<br> Демьяненко</h3>
-                            <p class="prof">Product Designer</p>
+                           <div class="text-cards">
+                               <h3 class="img-naim">Игорь Демьяненко</h3>
+                               <p class="prof">Product Designer</p>
+                            </div>
                         </li>
                         <li class="our-team-item">
                             <img class="img-cards" src="./img/pfoto2.jpg" alt="фото" width="270" height="260">
-                            <h3 class="img-naim">Ольга<br> Репина</h3>
-                            <p class="prof">Frontend Developer</p>
+                           <div class="text-cards">
+                               <h3 class="img-naim">Ольга Репина</h3>
+                               <p class="prof">Frontend Developer</p>
+                            </div>
 
                         </li>
                         <li class="our-team-item">
                             <img class="img-cards" src="./img/pfoto3.jpg" alt="фото" width="270" height="260">
-                            <h3 class="img-naim">Николай<br> Тарасов</h3>
-                            <p class="prof">Marketing</p>
+                            <div class="text-cards">
+                                <h3 class="img-naim">Николай Тарасов</h3>
+                                <p class="prof">Marketing</p>
+                            </div>
 
                         </li>
                         <li class="our-team-item">
                             <img class="img-cards" src="./img/pfoto4.jpg" alt="фото" width="270" height="260">
-                            <h3 class="img-naim">Михаил<br> Ермаков</h3>
-                            <p class="prof">UI Designer</p>
-
+                            <div class="text-cards">
+                                <h3 class="img-naim">Михаил Ермаков</h3>
+                                <p class="prof">UI Designer</p>
+                            </div>
                         </Li>
                     </ul>
                 </div>
