--- a/portfolio.html
+++ b/portfolio.html
@@ -81,72 +81,73 @@
                             <li class="projects-item">
                                 <img src="./img/img.jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Технокряк</h3>
-                                    <p>Веб-сайт</p>
+                                    <h3 class="proj-naim">Технокряк</h3>
+                                    <p class="proj-text">Веб-сайт</p>
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (2).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Постер New Orlean vs Golden Star</h3>
-                                    <p>Дизайн</p> 
+                                    <h3 class="proj-naim">Постер New Orlean vs Golden Star</h3>
+                                    <p class="proj-tex">Дизайн</p> 
                                 </div>                    
                                 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (3).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Ресторан Seafood</h3>
-                                    <p>Приложение</p>
+                                    <h3 class="proj-naim">Ресторан Seafood</h3>
+                                    <p class="proj-tex">Приложение</p>
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (4).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim"> 
-                                    <h3>Проект Prime</h3>
-                                    <p>Маркетинг</p>
+                                    <h3 class="proj-naim">Проект Prime</h3>
+                                    <p class="proj-tex">Маркетинг</p>
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (5).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Проект Boxes</h3>
-                                    <p>Приложение</p>
+                                    <h3 class="proj-naim">Проект Boxes</h3>
+                                    <p class="proj-tex">Приложение</p>
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (6).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim"> 
-                                    <h3>Inspiration has no Borders</h3>
-                                    <p>Веб-сайт</p>
+                                    <h3 class="proj-naim">Inspiration has no Borders</h3>
+                                    <p class="proj-tex">Веб-сайт</p>
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (7).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Издание Limited Edition</h3>
-                                    <p>Дизайн</p>
+                                    <h3 class="proj-naim">Издание Limited Edition</h3>
+                                    <p class="proj-tex">Дизайн</p>
+                                    
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (8).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Проект LAB</h3>
-                                    <p>Маркетинг</p>
+                                    <h3 class="proj-naim">Проект LAB</h3>
+                                    <p class="proj-tex">Маркетинг</p>
                                 </div>
 
                             </li>
                             <li class="projects-item">
                                 <img src="./img/img (9).jpg" alt="фото" width="370" height="294">
                                 <div class="projects-naim">
-                                    <h3>Growing Business</h3>
-                                    <p>Приложение</p>
+                                    <h3 class="proj-naim">Growing Business</h3>
+                                    <p class="proj-tex">Приложение</p>
                                 </div>
 
                             </li>
